Disallow absolute paths and file proocol