@@ -34,8 +34,6 @@ import org.testng.Assert;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
@@ -52,35 +50,35 @@ public class IDLClientGenPluginTests {
 
     @Test
     public void testIdlPluginBuildProject() {
-        assertIdlPluginProject("package_test_idl_plugin_1", 2);
+        assertIdlPluginProject("package_test_idl_plugin_1", 2, this.targetPath);
     }
 
     @Test
     public void testIdlPluginLocalPaths() throws IOException {
         String projectName = "package_test_idl_plugin_local_test";
-        Path projectDir = RESOURCE_DIRECTORY.resolve(projectName);
-        Path mainPath = projectDir.resolve("main.bal");
-        String originalContent = writeBalFile(projectDir, mainPath);
+//        Path projectDir = RESOURCE_DIRECTORY.resolve(projectName);
+//        Path mainPath = projectDir.resolve("main.bal");
+//        String originalContent = writeBalFile(projectDir, mainPath);
 
-        assertIdlPluginProject(projectName, 6);
+        assertIdlPluginProject(projectName, 4, ProjectUtils.getTemporaryTargetPath());
 
-        undoBalFile(mainPath, originalContent);
+//        undoBalFile(mainPath, originalContent);
     }
 
-    private String writeBalFile(Path projectDir, Path balPath) throws IOException {
-        String mainContent = Files.readString(balPath);
-        String newMainContent = mainContent.replaceAll("<<PROJECT_ABSOLUTE_PATH>>",
-                projectDir.toAbsolutePath().toString());
+//    private String writeBalFile(Path projectDir, Path balPath) throws IOException {
+//        String mainContent = Files.readString(balPath);
+//        String newMainContent = mainContent.replaceAll("<<PROJECT_ABSOLUTE_PATH>>",
+//                projectDir.toAbsolutePath().toString());
+//
+//        Files.write(balPath, newMainContent.getBytes(StandardCharsets.UTF_8));
+//        return mainContent;
+//    }
+//
+//    private void undoBalFile(Path balPath, String oldContent) throws IOException {
+//        Files.write(balPath, oldContent.getBytes(StandardCharsets.UTF_8));
+//    }
 
-        Files.write(balPath, newMainContent.getBytes(StandardCharsets.UTF_8));
-        return mainContent;
-    }
-
-    private void undoBalFile(Path balPath, String oldContent) throws IOException {
-        Files.write(balPath, oldContent.getBytes(StandardCharsets.UTF_8));
-    }
-
-    private void assertIdlPluginProject(String projectName, int expectedModules) {
+    private void assertIdlPluginProject(String projectName, int expectedModules, String targetPath) {
         Path projectDir = RESOURCE_DIRECTORY.resolve(projectName);
         BuildOptions buildOptions = BuildOptions.builder().targetDir(targetPath).build();
         Project project = TestUtils.loadBuildProject(projectDir, buildOptions);
@@ -96,7 +94,7 @@ public class IDLClientGenPluginTests {
         Assert.assertEquals(project.currentPackage().moduleIds().size(), expectedModules);
     }
 
-    @Test (dependsOnMethods = "testIdlPluginBuildProject")
+    @Test(dependsOnMethods = "testIdlPluginBuildProject")
     public void testIdlPluginBuildProjectLoadExisting() {
         BuildOptions buildOptions = BuildOptions.builder().targetDir(targetPath).build();
         Project project = TestUtils.loadBuildProject(
